# github-python-mono-libs

./: .gitignore  Dockerfile  README.md  compose.yaml  requirements.txt
app/: app.py
app/requirements/: requirements.txt  shared-libraries.txt
lib1/: pyproject.toml
lib1/lib/: pyproject.toml
lib2/: pyproject.toml
libs/lib-internal-ref/: pyproject.toml
libs/lib-internal-ref/src/lib-internal-ref/: some_module.py
libs/lib-internal-ref/src/lib1/: some_module.py
libs/lib1/: pyproject.toml
libs/lib_internal_ref/: pyproject.toml
libs/lib_internal_ref/src/lib_internal_ref/: some_module.py
libs/lib_internal_ref/tests/: test_some_module.py
libs/mns-subpackage-b/: README.md  pyproject.toml
libs/mns-subpackage-b/src/mynamespace/subpackage_b/: __init__.py
libs/mns-subpackage-b/tests/: test_namespace.py
libs/mynamespace-subpackage-a/: pyproject.toml
libs/mynamespace-subpackage-a/src/mynamespace/subpackage_a/: __init__.py
libs/pkg_lib2/src/pkg_lib2/pkg1/: some_module.py
pkg-lib/: pyproject.toml
pkg-lib/src/pkg-lib/pkg1/: __init__.py
pkg_lib2/: pyproject.toml
