[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mynamespace-subpackage-b"
version = "0.1.0"
description = "Namespace Package"
dependencies = [
    "lib-internal-ref @ git+https://${GITHUB_TOKEN}@github.com/username/private-repo.git@main#egg=lib-internal-ref",
]


[tool.setuptools.packages.find]
where = ["src/"]
include = ["mynamespace.subpackage_b"]