[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mynamespace-subpackage-b"
version = "0.1.0"
description = "Namespace Package"
dependencies = [
    "lib-internal-ref @ git+https://github.com/michael-riha/github-python-mono-libs.git@main#egg=lib1&subdirectory=libs/lib-internal-ref",
]


[tool.setuptools.packages.find]
where = ["src/"]
include = ["mynamespace.subpackage_b"]