[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mynamespace-subpackage-b"
version = "0.1.0"
description = "Namespace Package"
dependencies = [
    "lib_internal_ref @ git+https://github.com/michael-riha/github-python-mono-libs.git@main#egg=lib_internal_ref&subdirectory=libs/lib_internal_ref",
]

[tool.setuptools.packages.find]
where = ["src/"]
include = ["mynamespace.subpackage_b"]